--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
@@ -9,69 +9,86 @@
 </head>
 
 <body>
-    <div id="main">
-        <!-- 자기 소개 -->
-        <section>
-            <h2 class="subtitle">Who am I?</h2>
-            <p><mark>프런트엔드 웹 기술(Front-end Web Tech.)</mark>에 관심이 많습니다.
-                <br>현재 제주의 한 시골 마을에서 코딩 중입니다.
-            </p>
-        </section>
+    <div id="container">
+        <!-- 사이드바 -->
+        <aside>
+            <div id="namecard">
+                <img src="images/profile.jpg" style="width: 200px;" alt="">
+                <h1>Raccoon86</h1>
+                <p>너에 의한 너로 인해 행복한 나💕</p>
+            </div>
+            <div id="detail">
+                <p>KimHea, Korea</p>
+                <p>onehub86@gmail.com</p>
+            </div>
+            <div id="sns">
+                <h2>SNS</h2>
+            </div>
+        </aside>
+        <div id="main">
+            <!-- 자기 소개 -->
+            <section>
+                <h2 class="subtitle">Who am I?</h2>
+                <p><mark>프런트엔드 웹 기술(Front-end Web Tech.)</mark>에 관심이 많습니다.
+                    <br>현재 제주의 한 시골 마을에서 코딩 중입니다.
+                </p>
+            </section>
 
-        <!-- 경력 -->
-        <section>
-            <h2 class="subtitle">Experience</h2>
-            <ul>
-                <li>프론트엔드 개발
-                    <ul>
-                        <li>업무 내용 업무 내용 업무 내용</li>
-                        <li>업무 내용</li>
-                        <li>업무 내용</li>
-                    </ul>
-                </li>
-                <li>웹 디자인
-                    <ul>
-                        <li>업무 내용</li>
-                        <li>업무 내용 업무 내용</li>
-                    </ul>
-                </li>
-            </ul>
-        </section>
+            <!-- 경력 -->
+            <section>
+                <h2 class="subtitle">Experience</h2>
+                <ul>
+                    <li>프론트엔드 개발
+                        <ul>
+                            <li>업무 내용 업무 내용 업무 내용</li>
+                            <li>업무 내용</li>
+                            <li>업무 내용</li>
+                        </ul>
+                    </li>
+                    <li>웹 디자인
+                        <ul>
+                            <li>업무 내용</li>
+                            <li>업무 내용 업무 내용</li>
+                        </ul>
+                    </li>
+                </ul>
+            </section>
 
-        <!-- 숙련도 -->
-        <section>
-            <h2 class="subtitle">Skills</h2>
-        </section>
+            <!-- 숙련도 -->
+            <section>
+                <h2 class="subtitle">Skills</h2>
+            </section>
 
-        <!-- 학력 -->
-        <section>
-            <h2 class="subtitle">Education</h2>
-            <table>
-                <caption>학력 사항</caption>
-                <thead>
-                    <tr>
-                        <th>출신학교</th>
-                        <th>전공</th>
-                        <th>기간</th>
-                        <th>구분</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>경남대학교</td>
-                        <td>컴퓨터공학</td>
-                        <td>2006.3 ~ 2011.2</td>
-                        <td>휴학</td>
-                    </tr>
-                    <tr>
-                        <td>창원대학교</td>
-                        <td>컴퓨터공학</td>
-                        <td>2013.3 ~ 2015.6</td>
-                        <td>졸업수료</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
+            <!-- 학력 -->
+            <section>
+                <h2 class="subtitle">Education</h2>
+                <table>
+                    <caption>학력 사항</caption>
+                    <thead>
+                        <tr>
+                            <th>출신학교</th>
+                            <th>전공</th>
+                            <th>기간</th>
+                            <th>구분</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>경남대학교</td>
+                            <td>컴퓨터공학</td>
+                            <td>2006.3 ~ 2011.2</td>
+                            <td>휴학</td>
+                        </tr>
+                        <tr>
+                            <td>창원대학교</td>
+                            <td>컴퓨터공학</td>
+                            <td>2013.3 ~ 2015.6</td>
+                            <td>졸업수료</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+        </div>
     </div>
 </body>
 
