--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
             </div>
             <div id="sns">
                 <h2>SNS</h2>
+                <ul>
+                    <li>
+                        <a href="https://web.facebook.com/onehub86" target="_blank"><img src="images/ico_facebook.png" alt="Facebook"></a>
+                    </li>
+                    <li>
+                        <a href="httos://https://www.youtube.com/" target="_blank"><img src="images/ico_youtube.png" alt="Youtube"></a>
+                    </li>
+                </ul>
             </div>
         </aside>
         <div id="main">
